Amplis/src/parser/y.output
   0  $accept : programa $end

   1  programa : definiciones DEF MAIN '(' ')' ':' VOID '{' body '}'

   2  definiciones : definiciones definicion
   3               |

   4  definicion : def ';'
   5             | funcion

   6  funcion : DEF ID '(' params ')' ':' retorno '{' body '}'

   7  retorno : tipo
   8          | VOID

   9  body : defs
  10       | sentencias
  11       | defs sentencias
  12       |

  13  params :
  14         | param

  15  param : par
  16        | param ',' par

  17  par : ID ':' tipo

  18  defs : def ';'
  19       | defs def ';'

  20  def : ids ':' tipo

  21  ids : ID
  22      | ids ',' ID

  23  tipo : INT
  24       | DOUBLE
  25       | CHAR
  26       | '[' INT_CONSTANT ']' tipo
  27       | STRUCT '{' campos '}'

  28  campos : campo
  29         | campos campo

  30  campo : ids ':' tipo ';'

  31  sentencias : sentencia
  32             | sentencias sentencia

  33  sentencia : PRINT list ';'
  34            | INPUT list ';'
  35            | RETURN expresion ';'
  36            | condicionalSimple
  37            | condicionalComplejo
  38            | while
  39            | asignacion ';'
  40            | invocacion ';'
  41            | expresion INCREMENT ';'

  42  expresion : ID
  43            | INT_CONSTANT
  44            | CHAR_CONSTANT
  45            | REAL_CONSTANT
  46            | '(' expresion ')'
  47            | expresion '[' expresion ']'
  48            | expresion '.' ID
  49            | '(' tipo ')' expresion
  50            | '-' expresion
  51            | '!' expresion
  52            | expresion '*' expresion
  53            | expresion '/' expresion
  54            | expresion '%' expresion
  55            | expresion '+' expresion
  56            | expresion '-' expresion
  57            | expresion '>' expresion
  58            | expresion GREATER expresion
  59            | expresion '<' expresion
  60            | expresion SMALLER expresion
  61            | expresion NEGATION expresion
  62            | expresion EQUALS expresion
  63            | expresion AND expresion
  64            | expresion OR expresion
  65            | ID '(' args ')'

  66  list : expresion
  67       | list ',' expresion

  68  asignacion : expresion '=' expresion

  69  invocacion : ID '(' args ')'

  70  while : WHILE expresion ':' '{' sentencias '}'

  71  condicionalSimple : IF expresion ':' cuerpo

  72  condicionalComplejo : IF expresion ':' cuerpo else

  73  else : ELSE cuerpo

  74  cuerpo : sentencia
  75         | '{' sentencias '}'

  76  args :
  77       | arg

  78  arg : expresion
  79      | arg ',' expresion

state 0
	$accept : . programa $end  (0)
	definiciones : .  (3)

	.  reduce 3

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . DEF MAIN '(' ')' ':' VOID '{' body '}'  (1)
	definiciones : definiciones . definicion  (2)

	DEF  shift 3
	ID  shift 4
	.  error

	definicion  goto 5
	def  goto 6
	funcion  goto 7
	ids  goto 8


state 3
	programa : definiciones DEF . MAIN '(' ')' ':' VOID '{' body '}'  (1)
	funcion : DEF . ID '(' params ')' ':' retorno '{' body '}'  (6)

	ID  shift 9
	MAIN  shift 10
	.  error


state 4
	ids : ID .  (21)

	.  reduce 21


state 5
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 6
	definicion : def . ';'  (4)

	';'  shift 11
	.  error


state 7
	definicion : funcion .  (5)

	.  reduce 5


state 8
	def : ids . ':' tipo  (20)
	ids : ids . ',' ID  (22)

	':'  shift 12
	','  shift 13
	.  error


state 9
	funcion : DEF ID . '(' params ')' ':' retorno '{' body '}'  (6)

	'('  shift 14
	.  error


state 10
	programa : definiciones DEF MAIN . '(' ')' ':' VOID '{' body '}'  (1)

	'('  shift 15
	.  error


state 11
	definicion : def ';' .  (4)

	.  reduce 4


state 12
	def : ids ':' . tipo  (20)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21


state 13
	ids : ids ',' . ID  (22)

	ID  shift 22
	.  error


state 14
	funcion : DEF ID '(' . params ')' ':' retorno '{' body '}'  (6)
	params : .  (13)

	ID  shift 23
	')'  reduce 13

	params  goto 24
	param  goto 25
	par  goto 26


state 15
	programa : definiciones DEF MAIN '(' . ')' ':' VOID '{' body '}'  (1)

	')'  shift 27
	.  error


state 16
	tipo : INT .  (23)

	.  reduce 23


state 17
	tipo : DOUBLE .  (24)

	.  reduce 24


state 18
	tipo : CHAR .  (25)

	.  reduce 25


state 19
	tipo : STRUCT . '{' campos '}'  (27)

	'{'  shift 28
	.  error


state 20
	tipo : '[' . INT_CONSTANT ']' tipo  (26)

	INT_CONSTANT  shift 29
	.  error


state 21
	def : ids ':' tipo .  (20)

	.  reduce 20


state 22
	ids : ids ',' ID .  (22)

	.  reduce 22


state 23
	par : ID . ':' tipo  (17)

	':'  shift 30
	.  error


state 24
	funcion : DEF ID '(' params . ')' ':' retorno '{' body '}'  (6)

	')'  shift 31
	.  error


state 25
	params : param .  (14)
	param : param . ',' par  (16)

	','  shift 32
	')'  reduce 14


state 26
	param : par .  (15)

	.  reduce 15


state 27
	programa : definiciones DEF MAIN '(' ')' . ':' VOID '{' body '}'  (1)

	':'  shift 33
	.  error


state 28
	tipo : STRUCT '{' . campos '}'  (27)

	ID  shift 4
	.  error

	ids  goto 34
	campos  goto 35
	campo  goto 36


state 29
	tipo : '[' INT_CONSTANT . ']' tipo  (26)

	']'  shift 37
	.  error


state 30
	par : ID ':' . tipo  (17)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 38


state 31
	funcion : DEF ID '(' params ')' . ':' retorno '{' body '}'  (6)

	':'  shift 39
	.  error


state 32
	param : param ',' . par  (16)

	ID  shift 23
	.  error

	par  goto 40


state 33
	programa : definiciones DEF MAIN '(' ')' ':' . VOID '{' body '}'  (1)

	VOID  shift 41
	.  error


state 34
	ids : ids . ',' ID  (22)
	campo : ids . ':' tipo ';'  (30)

	':'  shift 42
	','  shift 13
	.  error


state 35
	tipo : STRUCT '{' campos . '}'  (27)
	campos : campos . campo  (29)

	ID  shift 4
	'}'  shift 43
	.  error

	ids  goto 34
	campo  goto 44


state 36
	campos : campo .  (28)

	.  reduce 28


state 37
	tipo : '[' INT_CONSTANT ']' . tipo  (26)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 45


state 38
	par : ID ':' tipo .  (17)

	.  reduce 17


state 39
	funcion : DEF ID '(' params ')' ':' . retorno '{' body '}'  (6)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	VOID  shift 46
	'['  shift 20
	.  error

	retorno  goto 47
	tipo  goto 48


state 40
	param : param ',' par .  (16)

	.  reduce 16


state 41
	programa : definiciones DEF MAIN '(' ')' ':' VOID . '{' body '}'  (1)

	'{'  shift 49
	.  error


state 42
	campo : ids ':' . tipo ';'  (30)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 50


state 43
	tipo : STRUCT '{' campos '}' .  (27)

	.  reduce 27


state 44
	campos : campos campo .  (29)

	.  reduce 29


state 45
	tipo : '[' INT_CONSTANT ']' tipo .  (26)

	.  reduce 26


state 46
	retorno : VOID .  (8)

	.  reduce 8


state 47
	funcion : DEF ID '(' params ')' ':' retorno . '{' body '}'  (6)

	'{'  shift 51
	.  error


state 48
	retorno : tipo .  (7)

	.  reduce 7


state 49
	programa : definiciones DEF MAIN '(' ')' ':' VOID '{' . body '}'  (1)
	body : .  (12)

	INT_CONSTANT  shift 52
	INPUT  shift 53
	PRINT  shift 54
	WHILE  shift 55
	IF  shift 56
	RETURN  shift 57
	ID  shift 58
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'}'  reduce 12

	body  goto 64
	def  goto 65
	defs  goto 66
	sentencias  goto 67
	ids  goto 8
	sentencia  goto 68
	expresion  goto 69
	condicionalSimple  goto 70
	condicionalComplejo  goto 71
	while  goto 72
	asignacion  goto 73
	invocacion  goto 74


state 50
	campo : ids ':' tipo . ';'  (30)

	';'  shift 75
	.  error


state 51
	funcion : DEF ID '(' params ')' ':' retorno '{' . body '}'  (6)
	body : .  (12)

	INT_CONSTANT  shift 52
	INPUT  shift 53
	PRINT  shift 54
	WHILE  shift 55
	IF  shift 56
	RETURN  shift 57
	ID  shift 58
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'}'  reduce 12

	body  goto 76
	def  goto 65
	defs  goto 66
	sentencias  goto 67
	ids  goto 8
	sentencia  goto 68
	expresion  goto 69
	condicionalSimple  goto 70
	condicionalComplejo  goto 71
	while  goto 72
	asignacion  goto 73
	invocacion  goto 74


state 52
	expresion : INT_CONSTANT .  (43)

	.  reduce 43


state 53
	sentencia : INPUT . list ';'  (34)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	list  goto 78
	expresion  goto 79


state 54
	sentencia : PRINT . list ';'  (33)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	list  goto 80
	expresion  goto 79


state 55
	while : WHILE . expresion ':' '{' sentencias '}'  (70)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 81


state 56
	condicionalSimple : IF . expresion ':' cuerpo  (71)
	condicionalComplejo : IF . expresion ':' cuerpo else  (72)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 82


state 57
	sentencia : RETURN . expresion ';'  (35)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 83


state 58
	ids : ID .  (21)
	expresion : ID .  (42)
	expresion : ID . '(' args ')'  (65)
	invocacion : ID . '(' args ')'  (69)

	'('  shift 84
	GREATER  reduce 42
	SMALLER  reduce 42
	EQUALS  reduce 42
	NEGATION  reduce 42
	OR  reduce 42
	AND  reduce 42
	INCREMENT  reduce 42
	'='  reduce 42
	'<'  reduce 42
	'>'  reduce 42
	'-'  reduce 42
	'+'  reduce 42
	'*'  reduce 42
	'/'  reduce 42
	'%'  reduce 42
	'.'  reduce 42
	'['  reduce 42
	':'  reduce 21
	','  reduce 21


state 59
	expresion : REAL_CONSTANT .  (45)

	.  reduce 45


state 60
	expresion : CHAR_CONSTANT .  (44)

	.  reduce 44


state 61
	expresion : '-' . expresion  (50)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 85


state 62
	expresion : '!' . expresion  (51)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 86


state 63
	expresion : '(' . expresion ')'  (46)
	expresion : '(' . tipo ')' expresion  (49)

	INT_CONSTANT  shift 52
	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'['  shift 20
	'('  shift 63
	.  error

	tipo  goto 87
	expresion  goto 88


state 64
	programa : definiciones DEF MAIN '(' ')' ':' VOID '{' body . '}'  (1)

	'}'  shift 89
	.  error


state 65
	defs : def . ';'  (18)

	';'  shift 90
	.  error


state 66
	body : defs .  (9)
	body : defs . sentencias  (11)
	defs : defs . def ';'  (19)

	INT_CONSTANT  shift 52
	INPUT  shift 53
	PRINT  shift 54
	WHILE  shift 55
	IF  shift 56
	RETURN  shift 57
	ID  shift 58
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'}'  reduce 9

	def  goto 91
	sentencias  goto 92
	ids  goto 8
	sentencia  goto 68
	expresion  goto 69
	condicionalSimple  goto 70
	condicionalComplejo  goto 71
	while  goto 72
	asignacion  goto 73
	invocacion  goto 74


state 67
	body : sentencias .  (10)
	sentencias : sentencias . sentencia  (32)

	INT_CONSTANT  shift 52
	INPUT  shift 53
	PRINT  shift 54
	WHILE  shift 55
	IF  shift 56
	RETURN  shift 57
	ID  shift 93
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'}'  reduce 10

	sentencia  goto 94
	expresion  goto 69
	condicionalSimple  goto 70
	condicionalComplejo  goto 71
	while  goto 72
	asignacion  goto 73
	invocacion  goto 74


state 68
	sentencias : sentencia .  (31)

	.  reduce 31


state 69
	sentencia : expresion . INCREMENT ';'  (41)
	expresion : expresion . '[' expresion ']'  (47)
	expresion : expresion . '.' ID  (48)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '%' expresion  (54)
	expresion : expresion . '+' expresion  (55)
	expresion : expresion . '-' expresion  (56)
	expresion : expresion . '>' expresion  (57)
	expresion : expresion . GREATER expresion  (58)
	expresion : expresion . '<' expresion  (59)
	expresion : expresion . SMALLER expresion  (60)
	expresion : expresion . NEGATION expresion  (61)
	expresion : expresion . EQUALS expresion  (62)
	expresion : expresion . AND expresion  (63)
	expresion : expresion . OR expresion  (64)
	asignacion : expresion . '=' expresion  (68)

	GREATER  shift 95
	SMALLER  shift 96
	EQUALS  shift 97
	NEGATION  shift 98
	OR  shift 99
	AND  shift 100
	INCREMENT  shift 101
	'='  shift 102
	'<'  shift 103
	'>'  shift 104
	'-'  shift 105
	'+'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	'['  shift 111
	.  error


state 70
	sentencia : condicionalSimple .  (36)

	.  reduce 36


state 71
	sentencia : condicionalComplejo .  (37)

	.  reduce 37


state 72
	sentencia : while .  (38)

	.  reduce 38


state 73
	sentencia : asignacion . ';'  (39)

	';'  shift 112
	.  error


state 74
	sentencia : invocacion . ';'  (40)

	';'  shift 113
	.  error


state 75
	campo : ids ':' tipo ';' .  (30)

	.  reduce 30


state 76
	funcion : DEF ID '(' params ')' ':' retorno '{' body . '}'  (6)

	'}'  shift 114
	.  error


state 77
	expresion : ID .  (42)
	expresion : ID . '(' args ')'  (65)

	'('  shift 115
	GREATER  reduce 42
	SMALLER  reduce 42
	EQUALS  reduce 42
	NEGATION  reduce 42
	OR  reduce 42
	AND  reduce 42
	INCREMENT  reduce 42
	'='  reduce 42
	'<'  reduce 42
	'>'  reduce 42
	'-'  reduce 42
	'+'  reduce 42
	'*'  reduce 42
	'/'  reduce 42
	'%'  reduce 42
	'.'  reduce 42
	'['  reduce 42
	']'  reduce 42
	')'  reduce 42
	':'  reduce 42
	';'  reduce 42
	','  reduce 42


state 78
	sentencia : INPUT list . ';'  (34)
	list : list . ',' expresion  (67)

	';'  shift 116
	','  shift 117
	.  error


state 79
	expresion : expresion . '[' expresion ']'  (47)
	expresion : expresion . '.' ID  (48)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '%' expresion  (54)
	expresion : expresion . '+' expresion  (55)
	expresion : expresion . '-' expresion  (56)
	expresion : expresion . '>' expresion  (57)
	expresion : expresion . GREATER expresion  (58)
	expresion : expresion . '<' expresion  (59)
	expresion : expresion . SMALLER expresion  (60)
	expresion : expresion . NEGATION expresion  (61)
	expresion : expresion . EQUALS expresion  (62)
	expresion : expresion . AND expresion  (63)
	expresion : expresion . OR expresion  (64)
	list : expresion .  (66)

	GREATER  shift 95
	SMALLER  shift 96
	EQUALS  shift 97
	NEGATION  shift 98
	OR  shift 99
	AND  shift 100
	'<'  shift 103
	'>'  shift 104
	'-'  shift 105
	'+'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	'['  shift 111
	';'  reduce 66
	','  reduce 66


state 80
	sentencia : PRINT list . ';'  (33)
	list : list . ',' expresion  (67)

	';'  shift 118
	','  shift 117
	.  error


state 81
	expresion : expresion . '[' expresion ']'  (47)
	expresion : expresion . '.' ID  (48)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '%' expresion  (54)
	expresion : expresion . '+' expresion  (55)
	expresion : expresion . '-' expresion  (56)
	expresion : expresion . '>' expresion  (57)
	expresion : expresion . GREATER expresion  (58)
	expresion : expresion . '<' expresion  (59)
	expresion : expresion . SMALLER expresion  (60)
	expresion : expresion . NEGATION expresion  (61)
	expresion : expresion . EQUALS expresion  (62)
	expresion : expresion . AND expresion  (63)
	expresion : expresion . OR expresion  (64)
	while : WHILE expresion . ':' '{' sentencias '}'  (70)

	GREATER  shift 95
	SMALLER  shift 96
	EQUALS  shift 97
	NEGATION  shift 98
	OR  shift 99
	AND  shift 100
	'<'  shift 103
	'>'  shift 104
	'-'  shift 105
	'+'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	'['  shift 111
	':'  shift 119
	.  error


state 82
	expresion : expresion . '[' expresion ']'  (47)
	expresion : expresion . '.' ID  (48)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '%' expresion  (54)
	expresion : expresion . '+' expresion  (55)
	expresion : expresion . '-' expresion  (56)
	expresion : expresion . '>' expresion  (57)
	expresion : expresion . GREATER expresion  (58)
	expresion : expresion . '<' expresion  (59)
	expresion : expresion . SMALLER expresion  (60)
	expresion : expresion . NEGATION expresion  (61)
	expresion : expresion . EQUALS expresion  (62)
	expresion : expresion . AND expresion  (63)
	expresion : expresion . OR expresion  (64)
	condicionalSimple : IF expresion . ':' cuerpo  (71)
	condicionalComplejo : IF expresion . ':' cuerpo else  (72)

	GREATER  shift 95
	SMALLER  shift 96
	EQUALS  shift 97
	NEGATION  shift 98
	OR  shift 99
	AND  shift 100
	'<'  shift 103
	'>'  shift 104
	'-'  shift 105
	'+'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	'['  shift 111
	':'  shift 120
	.  error


state 83
	sentencia : RETURN expresion . ';'  (35)
	expresion : expresion . '[' expresion ']'  (47)
	expresion : expresion . '.' ID  (48)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '%' expresion  (54)
	expresion : expresion . '+' expresion  (55)
	expresion : expresion . '-' expresion  (56)
	expresion : expresion . '>' expresion  (57)
	expresion : expresion . GREATER expresion  (58)
	expresion : expresion . '<' expresion  (59)
	expresion : expresion . SMALLER expresion  (60)
	expresion : expresion . NEGATION expresion  (61)
	expresion : expresion . EQUALS expresion  (62)
	expresion : expresion . AND expresion  (63)
	expresion : expresion . OR expresion  (64)

	GREATER  shift 95
	SMALLER  shift 96
	EQUALS  shift 97
	NEGATION  shift 98
	OR  shift 99
	AND  shift 100
	'<'  shift 103
	'>'  shift 104
	'-'  shift 105
	'+'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	'['  shift 111
	';'  shift 121
	.  error


state 84
	expresion : ID '(' . args ')'  (65)
	invocacion : ID '(' . args ')'  (69)
	args : .  (76)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	')'  reduce 76

	expresion  goto 122
	args  goto 123
	arg  goto 124


state 85
	expresion : expresion . '[' expresion ']'  (47)
	expresion : expresion . '.' ID  (48)
	expresion : '-' expresion .  (50)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '%' expresion  (54)
	expresion : expresion . '+' expresion  (55)
	expresion : expresion . '-' expresion  (56)
	expresion : expresion . '>' expresion  (57)
	expresion : expresion . GREATER expresion  (58)
	expresion : expresion . '<' expresion  (59)
	expresion : expresion . SMALLER expresion  (60)
	expresion : expresion . NEGATION expresion  (61)
	expresion : expresion . EQUALS expresion  (62)
	expresion : expresion . AND expresion  (63)
	expresion : expresion . OR expresion  (64)

	'.'  shift 110
	'['  shift 111
	GREATER  reduce 50
	SMALLER  reduce 50
	EQUALS  reduce 50
	NEGATION  reduce 50
	OR  reduce 50
	AND  reduce 50
	INCREMENT  reduce 50
	'='  reduce 50
	'<'  reduce 50
	'>'  reduce 50
	'-'  reduce 50
	'+'  reduce 50
	'*'  reduce 50
	'/'  reduce 50
	'%'  reduce 50
	']'  reduce 50
	')'  reduce 50
	':'  reduce 50
	';'  reduce 50
	','  reduce 50


state 86
	expresion : expresion . '[' expresion ']'  (47)
	expresion : expresion . '.' ID  (48)
	expresion : '!' expresion .  (51)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '%' expresion  (54)
	expresion : expresion . '+' expresion  (55)
	expresion : expresion . '-' expresion  (56)
	expresion : expresion . '>' expresion  (57)
	expresion : expresion . GREATER expresion  (58)
	expresion : expresion . '<' expresion  (59)
	expresion : expresion . SMALLER expresion  (60)
	expresion : expresion . NEGATION expresion  (61)
	expresion : expresion . EQUALS expresion  (62)
	expresion : expresion . AND expresion  (63)
	expresion : expresion . OR expresion  (64)

	'.'  shift 110
	'['  shift 111
	GREATER  reduce 51
	SMALLER  reduce 51
	EQUALS  reduce 51
	NEGATION  reduce 51
	OR  reduce 51
	AND  reduce 51
	INCREMENT  reduce 51
	'='  reduce 51
	'<'  reduce 51
	'>'  reduce 51
	'-'  reduce 51
	'+'  reduce 51
	'*'  reduce 51
	'/'  reduce 51
	'%'  reduce 51
	']'  reduce 51
	')'  reduce 51
	':'  reduce 51
	';'  reduce 51
	','  reduce 51


state 87
	expresion : '(' tipo . ')' expresion  (49)

	')'  shift 125
	.  error


state 88
	expresion : '(' expresion . ')'  (46)
	expresion : expresion . '[' expresion ']'  (47)
	expresion : expresion . '.' ID  (48)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '%' expresion  (54)
	expresion : expresion . '+' expresion  (55)
	expresion : expresion . '-' expresion  (56)
	expresion : expresion . '>' expresion  (57)
	expresion : expresion . GREATER expresion  (58)
	expresion : expresion . '<' expresion  (59)
	expresion : expresion . SMALLER expresion  (60)
	expresion : expresion . NEGATION expresion  (61)
	expresion : expresion . EQUALS expresion  (62)
	expresion : expresion . AND expresion  (63)
	expresion : expresion . OR expresion  (64)

	GREATER  shift 95
	SMALLER  shift 96
	EQUALS  shift 97
	NEGATION  shift 98
	OR  shift 99
	AND  shift 100
	'<'  shift 103
	'>'  shift 104
	'-'  shift 105
	'+'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	'['  shift 111
	')'  shift 126
	.  error


state 89
	programa : definiciones DEF MAIN '(' ')' ':' VOID '{' body '}' .  (1)

	.  reduce 1


state 90
	defs : def ';' .  (18)

	.  reduce 18


state 91
	defs : defs def . ';'  (19)

	';'  shift 127
	.  error


state 92
	body : defs sentencias .  (11)
	sentencias : sentencias . sentencia  (32)

	INT_CONSTANT  shift 52
	INPUT  shift 53
	PRINT  shift 54
	WHILE  shift 55
	IF  shift 56
	RETURN  shift 57
	ID  shift 93
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'}'  reduce 11

	sentencia  goto 94
	expresion  goto 69
	condicionalSimple  goto 70
	condicionalComplejo  goto 71
	while  goto 72
	asignacion  goto 73
	invocacion  goto 74


state 93
	expresion : ID .  (42)
	expresion : ID . '(' args ')'  (65)
	invocacion : ID . '(' args ')'  (69)

	'('  shift 84
	GREATER  reduce 42
	SMALLER  reduce 42
	EQUALS  reduce 42
	NEGATION  reduce 42
	OR  reduce 42
	AND  reduce 42
	INCREMENT  reduce 42
	'='  reduce 42
	'<'  reduce 42
	'>'  reduce 42
	'-'  reduce 42
	'+'  reduce 42
	'*'  reduce 42
	'/'  reduce 42
	'%'  reduce 42
	'.'  reduce 42
	'['  reduce 42


state 94
	sentencias : sentencias sentencia .  (32)

	.  reduce 32


state 95
	expresion : expresion GREATER . expresion  (58)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 128


state 96
	expresion : expresion SMALLER . expresion  (60)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 129


state 97
	expresion : expresion EQUALS . expresion  (62)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 130


state 98
	expresion : expresion NEGATION . expresion  (61)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 131


state 99
	expresion : expresion OR . expresion  (64)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 132


state 100
	expresion : expresion AND . expresion  (63)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 133


state 101
	sentencia : expresion INCREMENT . ';'  (41)

	';'  shift 134
	.  error


state 102
	asignacion : expresion '=' . expresion  (68)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 135


state 103
	expresion : expresion '<' . expresion  (59)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 136


state 104
	expresion : expresion '>' . expresion  (57)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 137


state 105
	expresion : expresion '-' . expresion  (56)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 138


state 106
	expresion : expresion '+' . expresion  (55)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 139


state 107
	expresion : expresion '*' . expresion  (52)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 140


state 108
	expresion : expresion '/' . expresion  (53)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 141


state 109
	expresion : expresion '%' . expresion  (54)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 142


state 110
	expresion : expresion '.' . ID  (48)

	ID  shift 143
	.  error


state 111
	expresion : expresion '[' . expresion ']'  (47)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 144


state 112
	sentencia : asignacion ';' .  (39)

	.  reduce 39


state 113
	sentencia : invocacion ';' .  (40)

	.  reduce 40


state 114
	funcion : DEF ID '(' params ')' ':' retorno '{' body '}' .  (6)

	.  reduce 6


state 115
	expresion : ID '(' . args ')'  (65)
	args : .  (76)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	')'  reduce 76

	expresion  goto 122
	args  goto 145
	arg  goto 124


state 116
	sentencia : INPUT list ';' .  (34)

	.  reduce 34


state 117
	list : list ',' . expresion  (67)

	INT_CONSTANT  shift 52
	ID  shift 77
	REAL_CONSTANT  shift 59
	CHAR_CONSTANT  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expresion  goto 146


state 118
	sentencia : PRINT list ';' .  (33)

	.  reduce 33


state 119
	while : WHILE expresion ':' . '{' sentencias '}'  (70)

	'{'  shift 147
	.  error


state 120
	condicionalSimple : IF expresion ':' . cuerpo  (71)
	condicionalComplejo : IF expresion ':' . cuerpo else  (72)
